syntax = "proto3";

option go_package="github.com/raspidrum-srv/api/grpc";

package channelControl.v1;

service ChannelControl {
  rpc SetValue(stream ControlValue) returns (stream ControlValue);
}


message ControlValue {
  string key = 1;
  int64 seq = 2;
  double value = 3;
}
